add results page to use user input, create working website at mvp

--- a/views/results.erb
+++ b/views/results.erb
@@ -18,23 +18,10 @@
     <div class="container">
 
 
-      <form action="/type">
-        <div class="is-triangle">
-          <label for="first-side">Enter side a</label>
-          <input type="text" class="form-control" id="first-side" name="first-side" placeholder="Enter first side">
+      <p>  <%= @description%></p>
 
-          <label for="second-side">Enter side b</label>
-          <input type="text" class="form-control" id="second-side" name="second-side" placeholder="Enter second side">
-
-          <label for="third-side">Enter side c</label>
-          <input type="text" class="form-control" id="third-side" name="third-side" placeholder="Enter third side">
-        </div>
-
-
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-
-
+      <a href="/">go back</a>
 
     </div>
+
   </body>
